[project]
name            = "PyNetworkLib"
version         = "0.0.4"
authors         = [
	{ name = "Haofan Zheng" },
]
description     = "A library containing various network helpers"
readme          = "README.md"
license         = {file = "LICENSE"}
requires-python = ">=3.10"
dependencies = [
	"requests~=2.32.3",
	'cryptography~=44.0.2',
]

[project.urls]
Repository = "https://github.com/zhenghaven/PyNetworkLib"

[tool.setuptools.packages.find]
exclude = [
	'setup.py',
	'run_unittest.py',
	'test*',
]

[project.entry-points.'console_scripts']
PyNetworkLib = 'PyNetworkLib.__main__:main'

